log
Thu 24 Aug 2023 08:17:08 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
   34 |      return list;
      |      ^~~~~~
list.c:34:13: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   34 |      return list;
      |             ^~~~
      |             List
list.c:34:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
635e0c8
Thu 24 Aug 2023 08:25:03 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:12: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   36 |     return list;
      |            ^~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9b6def
Thu 24 Aug 2023 08:37:17 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
5081990
Thu 24 Aug 2023 08:57:39 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:5: error: expected statement before ‘)’ token
   42 |     )
      |     ^
list.c: In function ‘pushFront’:
list.c:59:10: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   59 |   if(list->next == NULL) return;
      |          ^~
list.c: In function ‘popCurrent’:
list.c:87:10: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   87 |     free(node);
      |          ^~~~
      |          Node
list.c:87:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1ff6e61
Fri 25 Aug 2023 01:41:08 AM UTC: 
 list.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:5: error: expected statement before ‘)’ token
   42 |     )
      |     ^
Compilation failed
555362e
Fri 25 Aug 2023 01:41:23 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
a2f2e38
Fri 25 Aug 2023 01:47:12 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
bce3657
Fri 25 Aug 2023 01:48:55 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d5bcbd5
Fri 25 Aug 2023 01:53:52 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:12: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     if(list->next != NULL) {
      |            ^~
list.c:50:27: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   50 |       list->current = list->next;
      |                           ^~
list.c:51:19: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   51 |       return (list->data);
      |                   ^~
Compilation failed
56f044f
Fri 25 Aug 2023 01:55:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:27: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   50 |       list->current = list->next;
      |                           ^~
list.c:51:19: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   51 |       return (list->data);
      |                   ^~
Compilation failed
61f96db
Fri 25 Aug 2023 01:55:50 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
793392f
Fri 25 Aug 2023 01:57:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4656a7d
Fri 25 Aug 2023 02:00:34 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c22eb65
Fri 25 Aug 2023 02:05:12 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
aba3fb3
